# A08b2d3148c2a49f49d710a5f6b36c8e1

./: .gitignore  .gitmodules  .mcp.json  Makefile.gitmodule  README.md  package-lock.json
platform/: .dockerignore  .fastifyignore  .npmrc  .nxignore  Dockerfile.fastapi  Dockerfile.isolated.fastapi  Dockerfile.isolated.fastify  Dockerfile.test.fastify  Dockerfile.test.nginx  Makefile  Makefile.chromadb-rag  Makefile.ci_copy  Makefile.docker-clean  Makefile.docker-compose  Makefile.fastapi  Makefile.fastify  Makefile.gitmodule  Makefile.isolated  Makefile.pip  Makefile.pipx  Makefile.pnpm  Makefile.sequelize  Makefile.uv  README.md  biome.json  docker-compose.isolated.yml  docker-compose.yml  nx.json  package.json  pnpm-lock.yaml  pnpm-workspace.yaml  pyproject.toml  requirements.txt
platform/.bin/: analysis_code_csp_violations.py  backfill-meta-files  check-submodule-commits.sh  ci-clean-dest.py  ci-install.sh  ci_copy_to_directory_structure.sh  data_repo_remap001.py  decode-string-buffer-array.mjs  dev-fastify-watch.sh  encode-string-buffer-array.mjs  git-find-large-files.sh  git-hard-main-reset.sh  git-hook-setup.sh  lint-nx-project-paths.py  packagejson-sync-polyglot-mjs.py  pip-install-local-packages.sh  pyproject-install-fix-versions.py  pyproject-lint-dep-versions.py  pyproject-lint-no-readme.py  pyproject-merge-pkg.py  pyproject-sync-pkg-directory.py  pyproject-sync-pkg-repo.py  python-linting.py  python_lint_dep_find.py  sync-gitmodules.sh  test_integration_pkg_sync.py  ts-apply-noImplicitAny.sh
platform/common/config/: COMMIT  database_schema.mjs  page-navigation-menu-items.d.mts  page-navigation-menu-items.d.ts  page-navigation-menu-items.jsx  page-navigation-menu-items.mjs  vite-env-defaults.mjs
platform/common/data/: repo.json
platform/common/system/: open-api.yaml  openapi-schemas.json
platform/dataset/: makefile.repo  repo.json
platform/fastapi_apps/chromadb_rag_ingest/: README.md  __init__.py  cli_ingest.py  cli_status.py  cli_test_embedding.py  config.py  constants.py  db_models.py  embedding_client.py  embedding_client_httpx.py  embedding_httpx_client_get_kwargs.py  embedding_openai_client_get_kwargs.py  logging_setup.py  models.py  router.py  structured_templates.py
platform/fastapi_server/: pyproject.toml
platform/fastapi_server/computed_functions/: async_example.compute.py  compute_gemini_api_key.compute.py  compute_localhost_test_case_005_token.compute.py  example.compute.py  http_proxy_auth.compute.py  provider_api_keys.compute.py  request_token_001.compute.py  request_token_005.compute.py  startup_tokens.compute.py  sync_example.compute.py
platform/fastapi_server/fastapi_server/: __init__.py  logger.py  main.py
platform/fastapi_server/routes/: TODO.md  csp_report.route.py  gemini_openai_embedding.route.py  gemini_openai_embedding_router.route.py  gemini_openai_sdk.route.py  gemini_openai_sdk_router.route.py  health.route.py  healthz_admin.route.py  healthz_app_yaml_static_config.route.py  healthz_compute_functions.route.py  healthz_elasticsearch.route.py  healthz_elasticsearch_data.route.py  healthz_gemini_openai.route.py  healthz_integration.route.py  healthz_integration_gemini_openai_proxy.route.py  healthz_overwrite_from_context.route.py  healthz_postgres.route.py  healthz_postgres_data.route.py  healthz_redis.route.py  healthz_redis_data.route.py  healthz_s3.route.py  healthz_s3_cached_key.route.py  healthz_s3_data.route.py  openapi_llm.route.py  security_origins.route.py
platform/fastapi_server/tests/: test_lifecycle_context.py
platform/fastify_apps/: Makefile.sequelize  seed-from-json.mjs
platform/fastify_apps/_shared/: sequelize-error-utils.mjs
platform/fastify_apps/ai-agent-workflow-node-type/: package.json
platform/fastify_apps/categories/: package.json
platform/fastify_apps/code-repositories/: API.md
platform/fastify_apps/component_registry/: Agent.md
platform/fastify_apps/conditional_control_logic_viewer/: Agent.md
platform/fastify_apps/csv-datasource-hub/: package.json
platform/fastify_apps/figma-files/: API.md
platform/fastify_apps/figma_component_inspector/: Agent.md
platform/fastify_apps/form_builder/: Agent.md
platform/fastify_apps/fqdp_management_system/: Agent.md
platform/fastify_apps/github_workflow_action_ui/: package.json
platform/fastify_apps/group_role_management/: Agent.md
platform/fastify_apps/langgraph-static-flow/: SPEC.md
platform/fastify_apps/persona_editor/: README.md  package.json  project.json
platform/fastify_apps/process_checklist/: Agent.md
platform/fastify_apps/prompt_management_system/: Agent.md
platform/fastify_apps/rule_tree_table/: Agent.md
platform/fastify_apps/vulnerability-csv-workbench/: Agent.md  SPEC.md  package.json
platform/fastify_server/: package.json
platform/fastify_server/computed_functions/: async_example.compute.mjs  compute_gemini_api_key.compute.mjs  compute_localhost_test_case_005_token.compute.mjs  example.compute.mjs  http_proxy_auth.compute.mjs  provider_api_keys.compute.mjs  request_token_001.compute.mjs  request_token_005.compute.mjs  startup_tokens.compute.mjs  sync_example.compute.mjs
platform/fastify_server/routes/: TODO.md  apps_index.route.mjs  csp_report.route.mjs  gemini_openai_embedding.route.mjs  gemini_openai_embedding_router.route.mjs  gemini_openai_sdk.route.mjs  gemini_openai_sdk_router.route.mjs  healthz_admin.route.mjs  healthz_app_yaml_static_config.route.mjs  healthz_compute_functions.route.mjs  healthz_elasticsearch.route.mjs  healthz_elasticsearch_data.route.mjs  healthz_gemini_openai.route.mjs  healthz_integration.route.mjs  healthz_overwrite_from_context.route.mjs  healthz_postgres.route.mjs  healthz_postgres_data.route.mjs  healthz_redis.route.mjs  healthz_redis_data.route.mjs  healthz_s3.route.mjs  healthz_s3_cached_key.route.mjs  healthz_s3_data.route.mjs  healthz_vault_file.route.mjs  openapi_llm.route.mjs  test_integrations_api.route.mjs
platform/fastify_server/src/: app.mjs  index.mjs  main.mjs
platform/how-to-get-started/: COPY.md  JARS.md
platform/packages_py/: Makefile.python-pkg
(+5436 files in other folders)
