[tool.poetry]
name = "how-to-get-started-4-database"
version = "0.1.0"
description = "Database connection examples"
authors = ["Admin <admin@example.com>"]
package-mode = false

[tool.poetry.dependencies]
python = ">=3.11,<4.0"
env_resolve = {path = "../../packages_py/env_resolve", develop = true}
db_connection_postgres = {path = "../../packages_py/db_connection_postgres", develop = true}
db_connection_redis = {path = "../../packages_py/db_connection_redis", develop = true}
db_connection_elasticsearch = {path = "../../packages_py/db_connection_elasticsearch", develop = true}

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
