[project]
name = "auth_config"
version = "0.1.0"
description = "Auth configuration and validation logic for fetch clients"
requires-python = ">=3.11,<3.12"
dependencies = [
    "fastapi==0.128.0",
    "auth_encoding",
]

[tool.uv.sources]
auth_encoding = {workspace = true}

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["auth_config"]

[tool.pytest.ini_options]
testpaths = ["__tests__"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
addopts = "-v --tb=short"
