[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "db_connection_elasticsearch"
version = "1.0.0"
description = "Unified Elasticsearch connection library for Python"
license = "MIT"
requires-python = ">=3.11,<3.12"
authors = [
    { name = "Admin", email = "admin@example.com" },
]
dependencies = [
    "pydantic==2.12.5",
    "elasticsearch>=8.0.0,<9.0.0",
    "opensearch-py >=2.4.0",
    "aiohttp==3.13.3",
    "env_resolve",
]

[project.optional-dependencies]
dev = [
    "pytest >=8.0.0,<9.0.0",
    "pytest-asyncio >=0.23.0,<1.0.0",
    "pytest-cov >=4.1.0,<5.0.0",
    "ruff >=0.1.0,<1.0.0",
]

[tool.hatch.build.targets.wheel]
packages = ["db_connection_elasticsearch"]

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"
