[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "db_connection_postgres"
version = "1.0.0"
description = "Unified PostgreSQL connection package"
license = "MIT"
requires-python = ">=3.11,<3.12"
authors = [
    { name = "MTA" }
]
keywords = ["postgres", "postgresql", "database", "sqlalchemy", "asyncpg"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Typing :: Typed",
]
dependencies = [
    "pydantic==2.12.5",
    "sqlalchemy[asyncio]==2.0.22",
    "asyncpg==0.31.0",
    "psycopg2-binary==2.9.11",
    "env_resolve",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "pytest-asyncio>=0.23.0",
    "mypy>=1.8.0",
    "ruff>=0.2.0",
]

[tool.hatch.build.targets.wheel]
packages = ["db_connection_postgres"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-v --tb=short"
asyncio_mode = "auto"

[tool.mypy]
python_version = "3.11"
strict = true
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
disallow_incomplete_defs = true
check_untyped_defs = true
no_implicit_optional = true
warn_redundant_casts = true
warn_unused_ignores = true

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "W", "I", "N", "UP", "B", "C4", "SIM"]
ignore = ["E501"]
