[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "fetch_httpx"
version = "1.0.0"
description = "A feature-complete HTTP client package with async support, authentication, and framework integrations"
license = {text = "MIT"}
requires-python = ">=3.11,<3.12"
authors = [
    {name = "fetch_httpx contributors"}
]
keywords = [
    "http",
    "http-client",
    "async",
    "httpx[http2]>=0.28.1",
    "requests",
    "api",
    "rest",
    "fastapi==0.128.0",
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Internet :: WWW/HTTP",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Framework :: AsyncIO",
    "Typing :: Typed",
]

dependencies = [
    "httpx[http2]>=0.28.1",
]

[project.optional-dependencies]
http2 = [
    "h2>=4.0.0",
]
cli = [
    "click>=8.1.0",
    "rich>=13.0.0",
]
fastapi = [
    "fastapi==0.128.0",
]
cache-file = [
    "aiofiles==25.1.0",
]
all = [
    "fetch_httpx[http2,cli,fastapi,cache-file]",
]
dev = [
    "pytest>=7.0.0",
    "pytest-asyncio>=0.21.0",
    "pytest-cov>=4.0.0",
    "mypy>=1.0.0",
    "ruff>=0.1.0",
    "black>=23.0.0",
]
test = [
    "pytest>=7.0.0",
    "pytest-asyncio>=0.21.0",
    "pytest-cov>=4.0.0",
    "respx>=0.20.0",
]

[project.urls]
Homepage = "https://github.com/example/fetch_httpx"
Documentation = "https://github.com/example/fetch_httpx#readme"
Repository = "https://github.com/example/fetch_httpx"
Issues = "https://github.com/example/fetch_httpx/issues"

[tool.hatch.build]
dev-mode-dirs = [".."]

[tool.hatch.build.targets.wheel]
packages = ["fetch_httpx"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
addopts = "-v --tb=short"
markers = [
    "integration: marks tests as integration tests",
    "slow: marks tests as slow",
]

[tool.coverage.run]
source = ["."]
branch = true
omit = [
    "tests/*",
    "*/__pycache__/*",
]

[tool.coverage.report]
fail_under = 80
show_missing = true
exclude_lines = [
    "pragma: no cover",
    "if TYPE_CHECKING:",
    "raise NotImplementedError",
    "@abstractmethod",
]

[tool.mypy]
python_version = "3.11"
strict = true
warn_return_any = true
warn_unused_ignores = true
disallow_untyped_defs = true
disallow_incomplete_defs = true
check_untyped_defs = true

[[tool.mypy.overrides]]
module = ["httpx.*", "aiofiles.*"]
ignore_missing_imports = true

[tool.ruff]
target-version = "py311"
line-length = 100

[tool.ruff.lint]
select = [
    "E",   # pycodestyle errors
    "W",   # pycodestyle warnings
    "F",   # pyflakes
    "I",   # isort
    "B",   # flake8-bugbear
    "C4",  # flake8-comprehensions
    "UP",  # pyupgrade
]
ignore = [
    "E501",  # line too long (handled by formatter)
]

[tool.ruff.lint.isort]
known-first-party = ["fetch_httpx"]

[tool.black]
line-length = 100
target-version = ["py311"]
