[project]
name = "hello"
version = "0.1.0"
description = ""
requires-python = ">=3.11,<3.12"
dependencies = [
    "typing-extensions>=4.0.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["hello"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["__tests__"]
python_files = "test_*.py"
python_classes = "Test*"
python_functions = "test_*"
# Types-only module - coverage thresholds relaxed for pure type definitions
addopts = "--cov=fetch_types --cov-report=term-missing"
