[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "json_file_storage"
version = "1.0.0"
description = "File-based JSON storage with hash-based filenames"
license = {text = "MIT"}
requires-python = ">=3.11,<3.12"
authors = [
    {name = "json_file_storage contributors"}
]
keywords = [
    "json",
    "storage",
    "file-storage",
    "cache",
    "async",
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Framework :: AsyncIO",
    "Typing :: Typed",
]

dependencies = [
    "aiofiles==25.1.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "pytest-asyncio>=0.21.0",
    "pytest-cov>=4.0.0",
    "mypy>=1.0.0",
    "ruff>=0.1.0",
]

[project.urls]
Homepage = "https://github.com/example/json_file_storage"
Documentation = "https://github.com/example/json_file_storage#readme"
Repository = "https://github.com/example/json_file_storage"

[tool.hatch.build.targets.wheel]
packages = ["json_file_storage"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]

[tool.mypy]
python_version = "3.11"
strict = true
warn_return_any = true
warn_unused_ignores = true

[[tool.mypy.overrides]]
module = ["aiofiles.*"]
ignore_missing_imports = true

[tool.ruff]
target-version = "py311"
line-length = 100

[tool.ruff.lint]
select = ["E", "W", "F", "I", "B", "C4", "UP"]
ignore = ["E501"]
