[project]
name = "python-3.11-data-analysis-toolkit"
version = "1.0.0"
description = "Data analysis toolkit with Pandas, NumPy, Matplotlib, Seaborn, and Scikit-learn"
requires-python = ">=3.11,<3.12"

dependencies = [
    "pandas>=2.2,<3",
    "numpy>=1.26,<2",
    "matplotlib>=3.9,<4",
    "seaborn>=0.13,<1",
    "scikit-learn>=1.5,<2",
]

[project.optional-dependencies]
dev = [
    "jupyter>=1.0,<2",
    "ipykernel>=6.29,<7",
]

[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.backends._legacy:_Backend"
