[project]
name = "python-3.11-numpy-essentials"
version = "1.0.0"
description = "NumPy essentials — fast math operations and array handling"
requires-python = ">=3.11,<3.12"

dependencies = [
    "numpy>=1.26,<2",
]

[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.backends._legacy:_Backend"
