[project]
name = "python-3.11-scikit-learn-essentials"
version = "1.0.0"
description = "Scikit-learn essentials — predictive modeling and classical machine learning"
requires-python = ">=3.11,<3.12"

dependencies = [
    "scikit-learn>=1.5,<2",
    "pandas>=2.2,<3",
    "numpy>=1.26,<2",
]

[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.backends._legacy:_Backend"
